bases/applications/echo/service.yml
apiVersion: v1
kind: Service
metadata:
  name: echo-service
  labels:
    app: echo
    monitor: echo
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      name: echo-http
  selector:
    app: echo
